🗑️ Clean code